--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,8 +36,8 @@ dev = [
 requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
 build-backend = "setuptools.build_meta"
 
-[tool.setuptools]
-include-package-data = true
+[tool.setuptools.packages.find]
+where = ["."]
 
 [tool.setuptools_scm]
 local_scheme = "no-local-version"
