--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,12 @@ Repository = "https://github.com/kyzima-spb/flask-useful.git"
 dev = [
     'mypy',
 ]
+wtforms = [
+    'Flask-WTF>=1.0',
+]
+sqla = [
+    'Flask-SQLAlchemy>=2.0',
+]
 
 [build-system]
 requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
